# rust-api-auth

./: .env  Cargo.toml  README.md  configuration.yml
migrations/: 20230426121901_create_table_1.sql  20230428025510_create_table_login_history.sql  20230514033513_create_table_person.sql
src/: app.rs  configuration.rs  lib.rs  main.rs  startup.rs
src/config/: app.rs  configuration.rs  mod.rs
src/middleware/: auth_middleware.rs
src/models/: login_history.rs  mod.rs  pagination.rs  person.rs  response.rs  user.rs  user_token.rs
src/routers/: health_check.rs  mod.rs  ping_controller.rs  supscription.rs  user_controller.rs
src/services/: mod.rs  user_service.rs
src/sqlx_help/: mod.rs  sqlxhelp.rs
src/utils/: error.rs  mod.rs  token_utils.rs
