[package]
name = "news-service-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"
[[bin]]
path = "src/main.rs"
name = "news_service_rust"

[dependencies]
#actix-rt = "2"
actix-web = "4.0.0-beta.8"
actix-service="2.0.2"
actix-cors="0.6.4"
#actix-service="2.0.0-beta.5"
actix-session={version="0.7.2",features = ["cookie-session"]}
config = "0.13.3"
serde = { version = "1", features = ["derive"]}
uuid = { version = "1.3.1", features = ["v4"] }
chrono = "0.4.19"
bcrypt="0.14.0"
jsonwebtoken="8.3.0"
serde_json = "1.0.96"
futures="0.3.28"
futures-util = "0.3.28"
log="0.4.17"
env_logger="0.10.0"
[dependencies.sqlx]
version = "0.6.3"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "mysql",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"